--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("curtain.jpg");
+    background-image: url("peakpx.jpg");
     background-color: gray;
     height: 500px; 
     background-position: center; 
