--- a/public/styles.css
+++ b/public/styles.css
@@ -4,7 +4,7 @@ body{
     height: 500px; 
     background-position: center; 
     background-repeat: no-repeat; 
-    background-size: cover; 
+    background-size: 100%; 
     text-align: center;
     font-family: 'Signika Negative', sans-serif;
     color: beige;
