--- a/public/styles.css
+++ b/public/styles.css
@@ -1,7 +1,7 @@
 body{
     background-image: url("peakpx.jpg");
     background-color: gray;
-    height: 500px; 
+    height: 75vh; 
     background-position: center; 
     background-repeat: no-repeat; 
     background-size: cover; 
